manifests/deploy-microservice.yml
kind: Deployment
apiVersion: apps/v1
metadata:
    labels:
        app: plain-youngsters-microservice
        stack: frontend
        source: demo
    name: plain-youngsters-microservice
    namespace: microservices
spec:
    replicas: 5
    selector:
        matchLabels:
            run: plain-youngsters-microservice
    template:
        metadata:
            labels:
                app: plain-youngsters-microservice
                run: plain-youngsters-microservice
                source: demo
        spec:
            containers:
                -   image: 219099013464.dkr.ecr.us-west-2.amazonaws.com/plain-youngsters-microservice
                    name: plain-youngsters-microservice
                    ports:
                        -   name: web
                            containerPort: 8080
---

kind: Service
apiVersion: v1
metadata:
    labels:
        app: plain-youngsters-microservice-service
        stack: frontend
    name: plain-youngsters-microservice-service
    namespace: microservices
spec:
    selector:
        source: demo
        app: plain-youngsters-microservice
    ports:
        -   name: web
            protocol: TCP
            port: 30201
            targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    labels:
        stack: frontend
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$2
    name: plain-youngsters-ingress
    namespace: microservices
spec:
    ingressClassName: nginx
    rules:
        -   http:
                paths:
                    -  pathType: Prefix 
                       path: /plain-youngsters(/|$)(.*)
                       backend:
                          service:
                            name: plain-youngsters-microservice-service
                            port: 
                               number: 30201
